<resources>
    <string name="app_name">CloudCast</string>
    <string name="login_welcome">Welcome Back</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="txt_register_create_account">Create Account</string>
    <string name="welcome_user">Welcome, Juma!</string>
    <string name="current_weather_sub">Here is your current weather</string>
    <string name="label_location">Location</string>
    <string name="sample_location">Dar es Salaam, Tanzania</string>
    <string name="label_weather">Weather</string>
    <string name="sample_weather">Sunny</string>
    <string name="label_date">Date</string>
    <string name="sample_date">20 June 2025 . 09:00 AM</string>
    <string name="btn_save_weather">Save weather</string>
    <string name="tab_weather">WEATHER</string>
    <string name="tab_history">HISTORY</string>
    <string name="desc_menu">Menu</string>
    <string name="title_weather_history">Weather History</string>
    <string name="label_date_time">Date&amp;Time</string>
    <string name="btn_back">Back</string>
    <string name="history_sunny">Sunny</string>
    <string name="history_dar">Dar es Salaam</string>
    <string name="history_time">20 Jun 2025 • 09:30 AM</string>
    <string name="desc_details">Details</string>
    <string name="title_weather_details">Weather Details</string>
    <string name="btn_delete_record">Delete</string>
    <string name="label_coordinates">Coordinates</string>
    <string name="sample_coordinates">-6.7915, 39.2158</string>
    <string name="cv_history_item">View detail</string>
</resources>